--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
-  }
+    "express": "^4.16.4",
+    "express.js": "^1.0.0",
+    "fs": "^0.0.1-security"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TheDecoder007/note-taker.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/TheDecoder007/note-taker/issues"
+  },
+  "homepage": "https://github.com/TheDecoder007/note-taker#readme"
 }
